Fixed all spacing

--- a/src/home/style.css
+++ b/src/home/style.css
@@ -58,19 +58,20 @@
 /*-------- SECTIONS --------*/
 
 .section {
-    margin: 0;
-    padding-bottom: var(--m3);
+    margin-bottom: var(--m3);
+    padding: 0;
 }
 
 .section > h2 {
-    margin: 0;
+    margin-bottom: var(--m2);
+    padding: 0;
     color: var(--text);
     font-size: var(--header);
     text-align: center;
 }
 
 .section-text {
-    margin: var(--m2) var(--m3) 0 var(--m3);
+    margin: 0 var(--m3) var(--m2) var(--m3);
     color: var(--text);
     font-size: var(--normal);
     max-width: 500px;
@@ -85,6 +86,7 @@
     fill: var(--glowbase);
     filter: var(--glow);
     transition: var(--glow-animation);
+    margin-bottom: var(--m2);
 }
 
 .title {
@@ -92,7 +94,7 @@
     text-align: center;
     color: var(--text);
     font-family: Courgette, sans-serif;
-    margin: var(--m3) 0 0 0;
+    margin: 0 0 var(--m2) 0;
 }
 
 .counter-grid {
@@ -100,7 +102,7 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: var(--m2);
     max-width: 1000px;
-    padding: var(--m3);
+    padding: 0 var(--m3) var(--m2) var(--m3);
     margin: 0 auto;
     align-items: center;
 }
@@ -155,7 +157,7 @@
 }
 
 .social-container {
-    padding: var(--m3) 0;
+    margin: var(--m2) 0;
 }
 
 .social {
@@ -172,40 +174,36 @@
 /*-------- VIDEO --------*/
 
 #video > div {
-    margin-top: var(--m2);
+    margin-bottom: var(--m2);
 }
 
-.videoPlayer {
+#video > div > video {
     width: 100%;
     height: auto;
     max-width: 1000px;
-    margin: var(--m2) var(--m3) 0 var(--m3)
+    margin: 0 var(--m3);
 }
 
-/*-------- LOCATION --------*/
+/*-------- GALERIE --------*/
+
+/*-------- WO --------*/
 
 #wo > div {
-    margin: var(--m2) var(--m3) 0 var(--m3);
-    max-width: 1000px;
-    max-height: 500px;
-    overflow: hidden;
-    padding-bottom: 80%;
-    position: relative;
-    height: 0;
+    margin-bottom: var(--m2);
 }
 
 #wo > div > iframe {
-    top: 0;
-    left: 0;
-    height: 100%;
     width: 100%;
-    position: absolute;
+    height: 500px;
+    max-width: 1000px;
+    margin: 0 var(--m3);
+    border: 0;
 }
 
 /*-------- FOOTER --------*/
 
 .footer {
-    padding: var(--m3) 0 var(--m1) 0;
+    margin-bottom: var(--m2);
 }
 
 .footer-link {
